# bevy_mmo

./: Cargo.toml  Makefile  README.md
client/: Cargo.toml
client/src/: client_net.rs  main.rs  player.rs
server/: Cargo.toml
server/src/: main.rs  server.rs  server_net.rs
shared/: Cargo.toml
shared/src/: client_packets.rs  events_set.rs  lib.rs  server_packets.rs  world.rs
