[workspace]
resolver = "2"
members = ["server", "client", "shared"]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[workspace.dependencies]
bevy = "0.15.0"
bevy_renet = { git = "https://github.com/lucaspoffo/renet", branch = "master" }
bevy-inspector-egui = "0.28.0"
bevy_remote_inspector = "0.1.0"
tiny_bail = "0.4.3"
avian3d = { git = "https://github.com/Jondolf/avian", branch = "main" }
serde = "1.0.215"
bincode = "1.3.3"
rand = "0.8.5"
