[package]
name = "client"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
shared = { path = "../shared" }
bevy = { workspace = true }
bevy-inspector-egui = { workspace = true }
bevy_remote_inspector = { workspace = true }
tiny_bail = { workspace = true }
avian3d = { workspace = true }
bevy_renet = { workspace = true }
bevy-tnua = { git = "https://github.com/JulienLavocat/bevy-tnua" }
bevy-tnua-avian3d = { git = "https://github.com/JulienLavocat/bevy-tnua" }
