[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
bevy = { workspace = true }
bevy-inspector-egui = { workspace = true }
bevy_remote_inspector = { workspace = true }
tiny_bail = { workspace = true }
bevy_renet = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
rand = { workspace = true }
avian3d = { git = "https://github.com/Jondolf/avian", rev = "c4840ddf4a3adb081bb21c992e524231df83e195" }
bevy-tnua = { git = "https://github.com/JulienLavocat/bevy-tnua" }
bevy-tnua-avian3d = { git = "https://github.com/JulienLavocat/bevy-tnua" }
